# quantum-systems-test

./: README.md
.github/workflows/: cpp_class.yaml  cpp_task.yaml  python_task.yaml
1. cpp task/: cpp_task.cpp
2. python task/: python_task.py
3. cpp class/: CMakeLists.txt
3. cpp class/include/udp_sender/: UdpSender.hpp
3. cpp class/src/: UdpSender.cpp
3. cpp class/tests/: test_udp_sender.cpp
